exports[`plugins > social embed > render twitter upload modals #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 0,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "noopener",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "textWrap": "wrap",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};

exports[`plugins > social embed > render instagram upload modals #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 0,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "noopener",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "textWrap": "wrap",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};

exports[`plugins > social embed > render social  embed modals upload modals #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 0,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "noopener",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "textWrap": "wrap",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "noopener",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "textWrap": "wrap",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};

exports[`plugins > [tiptap] social embed > [tiptap] render social  embed modals upload modals #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 0,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "noopener",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "textWrap": "wrap",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "noopener",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "textWrap": "wrap",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};

exports[`plugins > [draft] social embed > [draft] render social  embed modals upload modals #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 3,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};

exports[`plugins > [tiptap] convert link to preview > with default config > [tiptap] should create link preview/embed from link after enter key #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 2,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "target": "_blank",
            "url": "www.wix.com"
          },
          "size": "content",
          "textWrap": "wrap"
        },
        "description": "A mock description",
        "thumbnail_url": "https://image.insider.com/5de5784979d757159d0b6838?width=1100&format=jpeg&auto=webp",
        "title": "A mock title"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "noopener",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "textWrap": "wrap",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>",
        "title": "I am a mock html"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};

exports[`plugins > [draft] convert link to preview > with default config > [draft] should create link preview/embed from link after enter key #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "",
            "target": "_blank",
            "url": "www.wix.com"
          },
          "size": "content"
        },
        "description": "A mock description",
        "thumbnail_url": "https://image.insider.com/5de5784979d757159d0b6838?width=1100&format=jpeg&auto=webp",
        "title": "A mock title"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};

exports[`plugins > [tiptap] convert link to preview > with default config > [tiptap] should create link preview from link after enter key #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "target": "_blank",
            "url": "www.wix.com"
          },
          "size": "content",
          "textWrap": "wrap"
        },
        "description": "A mock description",
        "thumbnail_url": "https://image.insider.com/5de5784979d757159d0b6838?width=1100&format=jpeg&auto=webp",
        "title": "A mock title"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};

exports[`plugins > [tiptap] convert link to preview > with default config > [tiptap] should embed link that supports embed #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "noopener",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "textWrap": "wrap",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>",
        "title": "I am a mock html"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};

exports[`plugins > [draft] convert link to preview > with default config > [draft] should create link preview from link after enter key #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "",
            "target": "_blank",
            "url": "www.wix.com"
          },
          "size": "content"
        },
        "description": "A mock description",
        "thumbnail_url": "https://image.insider.com/5de5784979d757159d0b6838?width=1100&format=jpeg&auto=webp",
        "title": "A mock title"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};

exports[`plugins > [draft] convert link to preview > with default config > [draft] should embed link that supports embed #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "",
            "target": "_blank",
            "url": "www.mockUrl.com"
          },
          "size": "content",
          "width": 350
        },
        "html": "<div style=\"background-color: black; border: 10px solid pink; height: 400px; text-align: center; color: white;\">This is a mock embed</div>",
        "title": "I am a mock html"
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-link-preview"
    }
  }
};
